kubernetes/apps/networking/external-services/app/dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: networking
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/instance: pihole
spec:
  # type: ExternalName
  # externalName: pihole.${SECRET_DOMAIN}
  externalIPs:
    - 192.168.99.99
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/hostname: pihole.${SECRET_DOMAIN}
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/instance: pihole
spec:
  ingressClassName: internal
  rules:
    - host: &host pihole.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - *host
