kubernetes/apps/networking/external-services/app/pfsense.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pfsense
  namespace: networking
  labels:
    app.kubernetes.io/name: pfsense
    app.kubernetes.io/instance: pfsense
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pfsense
subsets:
- addresses:
  - ip: 192.168.1.1
  ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfsense
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pfsense.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/name: pfsense
    app.kubernetes.io/instance: pfsense
spec:
  ingressClassName: internal
  rules:
    - host: &host pfsense.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfsense
                port:
                  number: 80
  tls:
    - hosts:
        - *host
