kubernetes/apps/networking/external-services/app/switch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: switch
  namespace: networking
  labels:
    app.kubernetes.io/name: switch
    app.kubernetes.io/instance: switch
spec:
  type: ExternalName
  externalName: switch.${SECRET_DOMAIN}
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switch
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: switch.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/name: switch
    app.kubernetes.io/instance: switch
spec:
  ingressClassName: internal
  rules:
    - host: &host switch.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: switch
                port:
                  number: 80
  tls:
    - hosts:
        - *host
